correct header for overflow - change grid on flex

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -11,6 +11,11 @@
   margin: 0;
   padding: 0;
   list-style: none;
+
+  @include vp-767 {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .footer-contacts__item {
