--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -10,26 +10,24 @@
 }
 
 .header__container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  min-height: 120px;
-  max-width: 1220px;
-  width: 90vw;
-  margin: -5px auto 0 auto;
-  padding-right: 60px;
+  display: grid;
+  grid-template-columns: 215px 1fr 224px; //logo contacts button
+  align-items: start;
+  max-width: 1320px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 31px 50px 38px 50px;
 
   @include vp-1023 {
-    padding-right: 0;
-    width: 84vw;
-    min-width: 670px;
-    min-height: 100px;
+    // min-width: 670px;
+    // min-height: 100px;
+    padding: 20px 50px 33px 50px;
+    grid-template-columns: 215px 1fr;
   }
 
   @include vp-767 {
-    min-height: 70px;
-    min-width: 260px;
-    width: 84%;
+    padding: 15px 25px 20px 25px;
+    grid-template-columns: 35px 1fr;
   }
 }
 
@@ -44,61 +42,39 @@
 
 .header__contacts-list {
   list-style: none;
-  max-width: 485px;
+  justify-self: center;
+  // max-width: 485px;
+  min-width: 400px;
+  width: 61.4%;
+  margin: 3px 0 0;
   padding: 0;
-  margin-left: -8px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 45px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 
-  @include vp-1023  {
-    padding: 0;
-    margin-top: 6px;
+  @include vp-1023 {
+    margin: 0 20px 0 10px;
+    justify-content: space-between;
+    justify-self: end;
+    // column-gap: 20px;
+    // margin-right: 20px;
+    // padding-right: 20px;
+    width: auto;
+    // min-width: auto;
     min-width: fit-content;
-    display: flex;
-    justify-content: flex-end;
-    flex-wrap: wrap;
+    width: 100px;
   }
 
   @include vp-767 {
-    min-width: 185px;
-    margin-right: -10px;
-    margin-top: 14px;
+    margin: -5px 10px 0 10px;
   }
 }
 
 .header__contacts-item {
-  // max-width: 100%;
   font-family: $ff-ptmono;
   list-style: none;
-  max-width: 225px;
-
-  @include vp-1023 {
-    padding-right: 20px;
-  }
-}
-
-.header__contacts-item a {
+  // max-width: 225px;
   display: flex;
-  align-items: center;
-  width: max-content;
-
-  @include vp-1023 {
-    padding: 10px;
-  }
-}
-
-.header__contacts-item span {
-  white-space: nowrap;
-  color: $color-alice-blue;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 18px;
-  word-wrap: break-word;
-
-  @include vp-1023 {
-    display: none;
-  }
 }
 
 .header__contacts-item svg {
@@ -107,6 +83,24 @@
 
   @include vp-1023 {
     margin: 0;
+  }
+}
+
+.header__contacts-item a {
+  display: flex;
+  align-items: center;
+  column-gap: 15px;
+  padding: 10px;
+
+  color: $color-alice-blue;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 18px;
+
+  @include vp-1023 {
+    span {
+      display: none;
+    }
   }
 }
 
@@ -122,10 +116,9 @@
 }
 
 .header__button {
-  // background-color: $color-deep-sky-blue;
   border-color: $color-alice-blue;
-  max-width: 220px;
-  padding: 10px 15px;
+  margin-left: 4px;
+  margin-top: 4px;
   color: $color-alice-blue;
   text-align: center;
   font-family: $ff-roboto;
@@ -133,6 +126,7 @@
   line-height: 16px;
   font-weight: 700;
   letter-spacing: 0.7px;
+  justify-self: start;
 
   @include vp-1023 {
     display: none;
