--- a/source/sass/blocks/menu.scss
+++ b/source/sass/blocks/menu.scss
@@ -1,10 +1,3 @@
-.footer-contacts__list {
-  @include vp-767 {
-    display: flex;
-    flex-direction: column;
-  }
-}
-
 .footer__menu-nav-wrapper:not(.footer-contacts__list) {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
